Refactor and add example code
Also tidy up premake script

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-.build-*/
-.codelite/
-.externalNativeBuild/
-.gradle/
-.idea/
-.vs/
-build/*/
+/.build-*/
+/.codelite/
+/.gradle/
+/.idea/
+/.vs/
+/bin/
+/build/
+/lib/
+/obj/
 
-*.gradle
-*.iml
-*.sln
-*.xcworkspace
-*.workspace
+/*.gradle
+/*.iml
+/*.sln
+/*.workspace
+/*.xcworkspace
+/gradle/wrapper/gradle-wrapper.jar
+/gradle/wrapper/gradle-wrapper.properties
+/gradle.properties
+/gradlew
+/gradlew.bat
+/local.properties
+/Makefile
 
-gradle/wrapper/gradle-wrapper.jar
-gradle/wrapper/gradle-wrapper.properties
-gradle.properties
-gradlew
-gradlew.bat
-local.properties
-Makefile
 premake5.exe
 premake5
