Fix casing in step names

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -11,8 +11,8 @@ jobs:
       with:
         submodules: true
 
-    - name: Generate Project Files
+    - name: Generate project files
       run: premake5 gmake2
 
-    - name: Build Project
+    - name: Build project
       run: make -j
