--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         submodules: true
 
-    - name: Generate Project Files
+    - name: Generate project files
       run: premake5 xcode4
 
     - name: Clean project
