--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -11,8 +11,8 @@ jobs:
       with:
         submodules: true
 
-    - name: Generate Project Files
+    - name: Generate project files
       run: premake5.exe vs2019
 
-    - name: Build Project
+    - name: Build project
       run: C:/"Program Files (x86)"/"Microsoft Visual Studio"/2019/BuildTools/MSBuild/Current/Bin/MSBuild.exe -property:Configuration=Release -maxCpuCount -verbosity:minimal -noLogo Geno.sln
