--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -2,10 +2,9 @@ name: CI (Linux)
 
 on:
   pull_request:
-    branches: [ master ]
-    types: [ opened, closed, reopened, synchronize ]
+    types: [ opened, reopened, synchronize ]
   push:
-    branches-ignore: [ master ]
+    branches: [ master ]
     paths-ignore: [ .github/**, resources/**, .clang-format, .editorconfig, .gitignore, README.md, LICENSE ]
 
 jobs:
