--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.ttf filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
