--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -19,4 +19,4 @@ jobs:
       run: premake5 gmake2
 
     - name: Build project
-      run: make RELEASE=1 -j -l 1
+      run: make config=release_x86_64 -j
