--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "premake/premake-geno"]
 	path = premake/premake-geno
 	url = https://github.com/Geno-IDE/premake-geno.git
+[submodule "third_party/rapidjson"]
+	path = third_party/rapidjson
+	url = https://github.com/Tencent/rapidjson
