--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/Tencent/rapidjson
 [submodule "third_party/discord-rpc"]
 	path = third_party/discord-rpc
-	url = https://github.com/discord/discord-rpc.git
+	url = https://github.com/discord/discord-rpc
