--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "third_party/glfw"]
-	path = third_party/glfw
-	url = https://github.com/glfw/glfw.git
 [submodule "third_party/imgui"]
 	path = third_party/imgui
 	url = https://github.com/ocornut/imgui.git
@@ -16,3 +13,7 @@
 [submodule "third_party/discord-rpc"]
 	path = third_party/discord-rpc
 	url = https://github.com/discord/discord-rpc
+[submodule "third_party/glfw-fork"]
+	path = third_party/glfw-fork
+	url = https://github.com/Geno-IDE/glfw-fork.git
+	branch = mods
